# ml-depth-pro

mlx_depth_pro/: CMakeLists.txt
mlx_depth_pro/include/: depth_pro_mlx.h
mlx_depth_pro/scripts/: bench_quick.py  benchmark.py  convert_weights.py  demo.py  export_vit_coreml.py
mlx_depth_pro/src/: depth_pro_mlx.cpp  model.cpp  model.h
mlx_depth_pro/tests/: debug_full_mlx_py.py  debug_step_by_step.py  test_numerical.py
